# string

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/public/: _headers
apps/web/src/: main.tsx
apps/web/src/app/: layout.tsx  rail.tsx
apps/web/src/canvas/: lines-canvas.tsx  loom-preview.tsx  progress-rail.tsx  stage.tsx  underlay-canvas.tsx
apps/web/src/components/: color-picker.tsx  segmented.tsx  slider.tsx
apps/web/src/export/: download.ts  export-panel.tsx  png.ts  sequence.ts  svg.ts  use-exports.ts
apps/web/src/guide/: auto-play.ts  compute.ts  guide-tabs.tsx  icons.tsx  instructions.tsx  loom-svg.tsx  materials.tsx  pdf-booklet.ts  pdf-template.ts  printables.tsx  progress-store.ts  regroup.ts  sequence-print.ts  speech.ts  step-display.tsx  step-illustrations.tsx  template.ts
apps/web/src/image/: blob-cache.ts  file-drop.tsx  sample-gallery.tsx  store.ts  types.ts  worker-client.ts
apps/web/src/solver/: physics.ts  store.ts  types.ts  view-store.ts  wasm.ts  worker-client.ts
apps/web/src/styles/: globals.css
apps/web/src/workers/: image.worker.ts  (+1 more)
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs  palette_extract.rs
crates/solver/src/preprocess/: bilateral.rs  clahe.rs  gamma.rs  luminance.rs  mask.rs  mod.rs  unsharp.rs
crates/solver/src/solver/: chord.rs  mod.rs  palette.rs  weight.rs
crates/solver/tests/: color_quality.rs
(+24 files in other folders)
