[package]
name = "solver"
version = "0.1.0"
edition = "2021"
description = "String-art solver compiled to WebAssembly."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rand_chacha = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
